# clanky

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md  biome.json  biome.jsonc  clean-tests.js  docker-compose.loki.yml  eslint.config.mjs  fix-imports.js  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  refactor.mjs  skip-failed-tests.js  skip-tests.js  tsconfig.backend.json  tsconfig.base.json  tsconfig.json  tsconfig.tests.json
agent/: agent.ts  instructions.md  sandbox.ts
agents/clanky/src/voice/clankvox/: CONTRIBUTING.md  Cargo.toml  README.md
agents/clanky/src/voice/clankvox/.cargo/: config.toml
agents/clanky/src/voice/clankvox/docs/: architecture.md  audio-pipeline.md  development.md  go-live.md
agents/clanky/src/voice/clankvox/src/: app_state.rs  audio_pipeline.rs  capture_supervisor.rs  connection_supervisor.rs  dave.rs  h264.rs  ipc.rs  ipc_log_layer.rs  ipc_protocol.rs  ipc_router.rs  main.rs  media_sink_wants.rs  music.rs  playback_supervisor.rs  rtcp.rs  rtp.rs  stream_publish.rs  transport_crypto.rs  video.rs  video_decoder.rs  video_state.rs  voice_conn.rs  vp8.rs
branding/: README.md
dashboard/: index.html
docs/: AGENTROOM.md  README.md  ROADMAP.md  agent-browser.md  agent-code.md  agent-debate-mode.md  clanker-activity.md  claude-ai-oauth.md  command-reference.md  communication-gateways.md  configuration.md  demo.md  discord-voice-architecture.md  discord-voice-live-runbook.md  e2e-test-spec.md  env-reference.md  first-time-setup.md  getting-started.md  improvements.md  initiative-discovery-spec.md  initiative-unified-spec.md  insights.md  live-gates.md  logs.md  memory-and-privacy.md  memory-system.md  native-discord-screen-share.md  oauth-providers.md  pi-foundation.md  plan-codex-agent-support.md  plan.md  preset-driven-agent-stack-spec.md  preset-system-spec.md  public-https-entrypoint-spec.md  replay-test-suite.md  rust-submodule-dev.md  screen-share-link-spec.md  settings.md  start-here.md  technical-architecture.md  (+7 more)
ios/: project.yml
scripts/: build-voice.ts  check-backend.mjs  check-doc-links.mjs  chrome-cdp-launch.ts  clanky-setup-new-user.ts  clanky-up.ts  clanky.ts  claude-login.ts  claude-oauth-login.ts  codex-login.ts  codex-oauth-login.ts  discord-pane-mirror.ts  generate-env-reference.ts  install-submodule-deps.mjs  ios.ts  list-default-test-files.ts  run-smoke.ts  setup-clankvox.ts
skills/: README.md  frontend-builder
src/: app.ts  bot.helpers.test.ts  bot.loop.test.ts  bot.replyDecisionPolicy.test.ts  bot.ts  botHelpers.ts  config.test.ts  config.ts  dashboard.api.smoke.test.ts  dashboard.ts  discovery.test.ts  discovery.ts  llm.providerSelection.test.ts  llm.ts  (+18 more)
src/voice/clankvox/: Cargo.toml
src/voice/clankvox/src/: app_state.rs  asr.rs  audio_pipeline.rs  capture.rs  capture_supervisor.rs  connection_supervisor.rs  dave.rs  ipc.rs  ipc_protocol.rs  ipc_router.rs  main.rs  music.rs  playback_supervisor.rs  voice_conn.rs
(+1072 files in other folders)
