[package]
name = "clankvox"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Rust media-plane subprocess for Discord voice, DAVE E2EE, and Go Live transport"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Volpestyle/clankvox"
homepage = "https://github.com/Volpestyle/clankvox"
keywords = ["discord", "voice", "opus", "rtp", "dave"]
categories = ["multimedia::audio", "network-programming"]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these common pedantic lints that are noisy in real-time audio code
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
anyhow = "1"
libc = "0.2"

# Voice WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# DAVE E2EE
davey = "0.1.2"

# Opus codec (standalone, for DAVE pipeline)
audiopus = "0.3.0-rc.0"

# Transport encryption (RTP payload AEAD)
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Persistent H264 video decoder (Cisco OpenH264 bindings)
openh264 = "0.9"
openh264-sys2 = "0.9"

# Fast JPEG encoding for decoded video frames (libjpeg-turbo bindings)
turbojpeg = "1.4"

# rustls crypto provider (required by tokio-tungstenite's rustls backend)
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[profile.release]
opt-level = 3
lto = "thin"
